src/css/base/_tables.scss
@use '../admin/variables';
@use '../admin/mixins--modes' as modeMixins;
@use '../admin/mixins--typography' as typographyMixins;

.table-wrapper {
  overflow: auto;
  border-radius: variables.$border-radius-small;
  margin-top: 1em;
  margin-bottom: 1em;
  @include typographyMixins.heading-style;

  &:focus {
    outline: 3px solid currentColor;
    outline-offset: 1px;
  }

  &:focus:not(:focus-visible) {
    outline: none;
  }

  &:focus-visible {
    box-shadow: 0 0 0 4px variables.$colour-black;
    @include modeMixins.dark-mode() {
      outline: 3px solid variables.$colour-white;
    }
  }
}

table {
  max-width: 100%;
}

caption {
  margin-top: .5em;
  @include typographyMixins.heading-s;
}

th,
td {
  padding: .25em .75em;
  vertical-align: text-top;
  border: 1px solid currentColor;

  &:first-of-type {
    border-left: none;
  }

  &:last-of-type {
    border-right: none;
  }
}

th {
  text-align: left;
  border-top: none;
  hyphens: none;
}

td {
  font-weight: 400;
}

tr {

  &:last-of-type {

    td {
      border-bottom: none;
    }
  }
}

